# ruble_volatility

./: Dockerfile  LICENSE  README.md  check_system.py  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
analytics/: models.py  schemas.py  services.py  tests.py  urls.py  views.py
analytics/management/commands/: seed_history.py
analytics/migrations/: 0001_initial.py
analytics/templates/analytics/: dashboard.html
core/: settings.py  urls.py  wsgi.py
data/: milestones.csv
static/analytics/js/: dashboard.js
